fix: escape characters were ignored on solving regex